--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       alt="Logo o Immagine di KOD-I"
     />
     <h1>KOD-I</h1>
-    <h2>LIVE BETTER</h2>
+    <h2>"Every second counts"</h2>
 
     <form>
       <input type="text" name="nome" placeholder="Nome e Cognome" required />
