--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   </head>
   <body>
     <img
+      id="logo"
       src="images/KOD-I DEFINITIVO ROTONDO.png"
       alt="Logo o Immagine di KOD-I"
     />
@@ -28,5 +29,7 @@
       />
       <button type="submit">Invia richiesta</button>
     </form>
+
+    <script src="script.js"></script>
   </body>
 </html>
