--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="it">
   <head>
@@ -15,7 +14,10 @@
       id="logo"
       src="images/KOD-I DEFINITIVO ROTONDO.png"
       alt="Logo o Immagine di KOD-I"
+      data-download="images/documento.pdf"
     />
+    <span id="messaggio-download" class="nascosto">File scaricato</span>
+
     <h1>KOD-I</h1>
     <h2>"Every second counts"</h2>
 
